--- a/angular.json
+++ b/angular.json
@@ -30,7 +30,9 @@
 						"target": "shop:serve-original:development",
 						"rebuildDelay": 0,
 						"dev": true,
-						"port": 0
+						"port": 0,
+						"disableHostCheck": true,
+						"host": "0.0.0.0"
 					}
 				},
 				"extract-i18n": {
@@ -114,7 +116,8 @@
 					},
 					"defaultConfiguration": "development",
 					"options": {
-						"port": 4201
+						"port": 4201,
+						"host": "0.0.0.0"
 					}
 				}
 			}
